Thu Sep  3 10:20:48 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/AMI_CCM/Receiver/Hello_Receiver_exec.cpp:
          Resolved compiler error on windows.

Thu Sep  3 08:19:18 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/DomainApplicationManager/Node_Locator.cpp:
          Log message inserted.

        * DAnCE/RepositoryManager/URL_Parser.cpp:
          Resolved compiler error on Windows.

Thu Sep  3 07:48:59 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/DomainApplication/Domain_Application_Impl.cpp:
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/ExecutionManager/ExecutionManager_Impl.cpp:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:
        * DAnCE/Plan_Generator/PCVisitor.cpp:
        * DAnCE/Plan_Generator/Plan_Generator_Impl.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp:
        * DAnCE/RepositoryManager/PC_Updater.cpp:
        * DAnCE/RepositoryManager/RM_Helper.cpp:
        * DAnCE/RepositoryManager/RepositoryManager.cpp:
        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp:
        * DAnCE/RepositoryManager/URL_Parser.h:
        * DAnCE/RepositoryManager/URL_Parser.cpp:
        * DAnCE/RepositoryManager/ZIP_Wrapper.h:
        * DAnCE/RepositoryManager/ZIP_Wrapper.cpp:
        * DAnCE/RepositoryManager/repository_manager_admin_exec.cpp:
        * DAnCE/StaticConfigurator/StaticDAnCEParser.cpp:
        * DAnCE/TargetManager/CmpClient.cpp:
        * DAnCE/TargetManager/DomainDataManager.cpp:
        * DAnCE/tests/CIAO/ExecutionManager-Deployments/simple_em_launcher.cpp:
        * DAnCE/tests/CIAO/NodeManager-Deployments/simple_nm_launcher.cpp:
          Replaced all ACE_ERROR-s, ACE_ERROR_RETURN-s and ACE_DEBUG-s with th
          DANCE variant.

Wed Sep  2 12:09:58 UTC 2009  Marcel Smit  <msmit@remedy.nl>
